@@ -151,6 +151,7 @@
    <Action name="new tab" />
    <Action name="lock tab" />
    <Action name="duplicate tab" />
+   <Action name="move_tab_to_other_side" />
    <Action name="close tab" />
    <Action name="close inactive tabs" />
    <Action name="close duplicated tabs" />
