@@ -1,3 +1,4 @@
+    ADDED: action: Move Current Tab to Other Side - shortcut: CTRL + SHIFT + O
     ADDED: view: iconsizes 64, 128, 256
     ADDED: history is saved/restored
     ADDED: action: Restore Selection
